Fix Gamble button hover on Firefox

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -74,7 +74,7 @@ $dark_grey : #303030;
     align-self: center;
 
     .gamble {
-      //cursor: pointer;
+      position: relative;
       font-size: 24px;
       display: inline-block;
       vertical-align: middle;
